--- a/semantic-seo-expert.html
+++ b/semantic-seo-expert.html
@@ -87,11 +87,11 @@
         </ul>
       </nav>
     </header>
-<main>
 
+<main>
 <header class="site-header">
   <div class="container">
-    <h1>Best Semantic SEO Expert in Bangladesh</h1>
+    <h1>Best Semantic SEO Expert in Bangladesh 2026</h1>
     <p>
       Data-driven, entity-focused & NLP-optimized SEO strategies designed
       for long-term Google visibility — not temporary rankings.
