--- a/semantic-seo-expert.html
+++ b/semantic-seo-expert.html
@@ -91,7 +91,7 @@
 <main>
 <header class="site-header">
   <div class="container">
-    <h1>Best Semantic SEO Expert in Bangladesh 2026</h1>
+    <h1>Best Semantic SEO Expert in Bangladesh 2026| Raju Ghosh</h1>
     <p>
       Data-driven, entity-focused & NLP-optimized SEO strategies designed
       for long-term Google visibility — not temporary rankings.
