--- a/generative-seo-expert.html
+++ b/generative-seo-expert.html
@@ -94,7 +94,7 @@
   <div class="hero-container">
     <!-- Hero Image -->
     <div class="hero-image">
-      <img src="hero-generative-seo.png" alt="Generative SEO Expert" itemprop="image">
+      <img src="ranking-proof-rajughoshbd.webp" alt="Generative SEO Expert" itemprop="image">
     </div>
 
     <!-- Hero Content -->
