--- a/generative-seo-expert.html
+++ b/generative-seo-expert.html
@@ -94,7 +94,7 @@
   <div class="hero-container">
     <!-- Hero Image -->
     <div class="hero-image">
-      <img src="ranking-proof-rajughoshbd.webp" alt="Generative SEO Expert" itemprop="image">
+      <img src="/image/infographic-generative-seo.png" alt="Generative SEO Expert" itemprop="image">
     </div>
 
     <!-- Hero Content -->
@@ -114,7 +114,7 @@
 
       <!-- Infographic Placeholder -->
       <div class="hero-infographic">
-        <img src="infographic-generative-seo.png" alt="Generative SEO Process">
+        <img src="/image/hero-generative-seo.png" alt="Generative SEO Process">
       </div>
     </div>
   </div>
